Delete unused code and stuff.